fix(setup): footer z-index conflicting with floating button

--- a/assets/wizards/setup/style.scss
+++ b/assets/wizards/setup/style.scss
@@ -58,6 +58,7 @@
 
 .newspack-footer {
 	flex-direction: row-reverse;
+	z-index: -1;
 
 	&__logo {
 		margin-left: 0;
